# puzzleshelf

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/examples/: multiple_input.py  single_input.py
src/puzzleshelf/: __init__.py  puzzleshelf.py
