[project]
name = "puzzleshelf"
version = "0.0.1a1"
description = "A code puzzle solving framework"
readme = "README.md"
authors = [
    { name = "Sean Malloy", email = "sfmalloy.dev@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
